remove switch from nav

--- a/index.html
+++ b/index.html
@@ -791,8 +791,8 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <a href="/docs/invoke">invoke</a>
     <hr>
     <a href="/docs/sequence">sequence</a>
-    <hr>
-    <a href="/docs/switch">switch</a>
+    <!--<hr>
+    <a href="/docs/switch">switch</a>-->
     <hr>
     <a href="/docs/proxy">proxy</a>
     <hr>
