--- a/404.html
+++ b/404.html
@@ -128,8 +128,8 @@
     <a href="/docs/invoke">invoke</a>
     <hr>
     <a href="/docs/sequence">sequence</a>
-    <hr>
-    <a href="/docs/switch">switch</a>
+    <!--<hr>
+    <a href="/docs/switch">switch</a>-->
     <hr>
     <a href="/docs/proxy">proxy</a>
     <hr>
