add types & interfaces doc

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <hr>
     <a href="/docs/emission">Emission and context</a>
     <hr>
-    <a href="/docs/interfaces">Interfaces</a>
+    <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
     <a href="/docs/under-the-hoold">Under the hood</a>
 
