add under the hood docs

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <hr>
     <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
-    <a href="/docs/under-the-hoold">Under the hood</a>
+    <a href="/docs/under-the-hood">Under the hood</a>
 
   </div>
   <div class="search">
