fix minor stuff in quick-dive

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ a.send('hellow!');
 b.send('world!');</code>
 </pre>
 
-This basically means the first of <span code>a, b</span> will be connected
-to the first of <span code>c, d</span>, the second of the former to the second of the latter, etc.
+This means <span code>a</span> is connected to <span code>c</span> and
+<span code>b</span> is connected to <span code>d</span>.
 
 <br><br>
 
@@ -414,7 +414,7 @@ also be of that type.
 
 <h3 id="composition">Composition</h3>
 
-You can re-use parts of your reactive flows using the
+You can re-use parts of your reactive flows using
 <a href="/docs/composition"><span code>composition()</span></a>:
 
 <pre try="https://stackblitz.com/edit/connective-cheat-13">
